Use overflow auto instead of overflow scroll to prevent unneeded scrollbars

--- a/css/popups.css
+++ b/css/popups.css
@@ -21,7 +21,7 @@
 	text-align: center;
 	padding: 8px;
 	max-height: 100vh;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 #errorPopup .headerText {
